# pqr-scanner-v.1

./: .gitattributes  .gitignore  .pqrrc.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: authoring-rules.md  configruation.md
examples/minimal-python/: app.py  crypto_samples.py  pq_demo.py  tls.py
examples/minimal-python/scripts/: genrsa.sh
pqr/: __init__.py  cli.py
pqr/analyzers/: python_ast.py
pqr/core/: config.py  policy.py  rules_engine.py  scanner.py
pqr/policy/: index.yaml  nist-draft.yaml  nist-stable.yaml
pqr/rules/: index.yaml
pqr/rules/v0.1/: python_core.yml
tests/integration/: test_scan_minimal.py
tests/rules/PY-AES-ECB/: should_match.py  should_not_match.py
tests/rules/PY-HASH-MD5-SHA1/: should_match.py  should_not_match.py
tests/rules/PY-JWT-CLASSICAL-SIG/: should_match.py
tests/rules/PY-REQ-NOVERIFY/: should_match.py  should_not_match.py
tests/rules/PY-SIG-PQ-NIST/: should_match.py  should_not_match.py
tests/rules/PY-SSL-OLD-PROTO/: should_match.py  should_not_match.py
tests/rules/TOOL-OPENSSL-GENRSA/: should_match.sh  should_not_match.sh
tests/rules/TOOL-OPENSSL-SIGN/: should_match.sh  should_not_match.sh
tests/unit/: test_dedupe.py  test_python_ast_events.py  test_rules_load.py  test_rules_pack_fixtures.py
