[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "pqr"
version = "0.0.1"
description = "Post-Quantum Readiness scanner (Python-first MVP)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Dany A. Darghouth" }]
dependencies = ["PyYAML>=6.0.1"]

[project.scripts]
pqr = "pqr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pqr"]

[tool.hatch.build.targets.wheel.force-include]
"pqr/rules" = "pqr/rules"
